--- a/ios/Config/config.xcconfig
+++ b/ios/Config/config.xcconfig
@@ -1,8 +1,8 @@
 PRODUCT_BUNDLE_IDENTIFIER = $(BUNDLE_IDENTIFIER)$(BUNDLE_IDENTIFIER_APPEND)
 
-BUNDLE_DISPLAY_NAME = NativeTemplate
-BUNDLE_IDENTIFIER = com.mendix.native.template
+BUNDLE_DISPLAY_NAME = AppTest
+BUNDLE_IDENTIFIER = com.nativemobileapp.mobile
 
-RUNTIME_URL = http:\/\/localhost:8080
+RUNTIME_URL = http:\/\/localhost/
 
-PRODUCT_NAME = nativeTemplate
+PRODUCT_NAME = AppIris
